[gd_scene load_steps=8 format=3 uid="uid://eiem2x6r3rqr"]

[ext_resource type="Script" uid="uid://dluxct28rxm3e" path="res://UI/hud.gd" id="1_2ptjp"]
[ext_resource type="PackedScene" uid="uid://u7x6mra6uojr" path="res://UI/Container/Block/block_container.tscn" id="2_f2wx0"]
[ext_resource type="PackedScene" uid="uid://c7vrph7rfyvj2" path="res://UI/Container/Mode/mode_container.tscn" id="4_f2wx0"]
[ext_resource type="PackedScene" uid="uid://chk1c76aau6lc" path="res://UI/Container/UndoRedo/undo_redo_container.tscn" id="4_gppie"]
[ext_resource type="PackedScene" uid="uid://2o3mcumpuswf" path="res://UI/Container/Save/save_container.tscn" id="6_2ptjp"]
[ext_resource type="PackedScene" uid="uid://ohomidc2fo8k" path="res://UI/Container/Camera/camera_container.tscn" id="19_pgems"]
[ext_resource type="PackedScene" uid="uid://brhk0ahx4jv5c" path="res://UI/Container/Stats/stats_container.tscn" id="19_rsrlt"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2ptjp")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -216.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(320, 216)
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="BlockContainer" parent="PanelContainer/MarginContainer" instance=ExtResource("2_f2wx0")]
layout_mode = 2

[node name="CameraContainer" parent="." instance=ExtResource("19_pgems")]
offset_right = 152.0
offset_bottom = 48.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -69.0
offset_right = 152.0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ModeContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_f2wx0")]
layout_mode = 2

[node name="UndoRedoContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_gppie")]
layout_mode = 2

[node name="SaveContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource("6_2ptjp")]
layout_mode = 2

[node name="StatsContainer" parent="VBoxContainer" instance=ExtResource("19_rsrlt")]
layout_mode = 2
